--- a/css/blogger.css
+++ b/css/blogger.css
@@ -1,3 +1,11 @@
+.frame{
+    display: flex;
+    width: 100%;
+}
+.item{
+   width: calc(100% / 4);
+   text-align: center;
+}
 .hidden_box {
     margin: 2em 0;/*前後の余白*/
     padding: 0;
